fixed right column image borders getting clipped off

--- a/source/stylesheets/layout.css.scss
+++ b/source/stylesheets/layout.css.scss
@@ -38,11 +38,11 @@ aside {
   .two-column {
     @include clearfix;
     .column-left {
-      width: 46%;
+      width: 47%;
       float: left;
     }
     .column-right {
-      width: 46%;
+      width: 47%;
       float: right;
     }
   }
